modified html and css

--- a/index.css
+++ b/index.css
@@ -3,27 +3,32 @@
     margin: 0;
 }
 body{
-    background-color: black;
+    /* background-color: black; */
 }
 nav{
-    height: 60px;
-    color: white;
     background-color: black;
-    border: 3px solid white;
-    border-radius: 2px;
-    margin:5px;
-}
-#logo{
-    text-transform: lowercase;
-    size:25px;
-    color: rgb(205, 144, 32);
-    
+    border: 1px solid white;
 }
 a{
-    color: white;
     text-decoration: none;
+    color: white;
     margin-right: 239px;
 }
 button{
-    background-color: #f08804;
+    background-color: orange;
+}
+
+.box{
+border: 1px solid black;
+height: 100px;
+width: 100px;
+}
+#box1{
+    background-color: rgb(199, 7, 7 , 0.5);
+}
+#box2{
+    background-color: rgba(107, 135, 9, 0.5);
+}
+#box3{
+    background-color: rgba(9, 74, 177, 0.5);
 }
