--- a/index.css
+++ b/index.css
@@ -2,22 +2,24 @@
     padding: 0;
     margin: 0;
 }
-body{
-    /* background-color: black; */
-}
-nav{
+
+#navbar{
     background-color: black;
     border: 1px solid white;
+    display: flex;
+    justify-content: space-between;
 }
 a{
     text-decoration: none;
     color: white;
-    margin-right: 239px;
 }
 button{
     background-color: orange;
 }
-
+main{
+    display: flex;
+    justify-content: center;
+}
 .box{
 border: 1px solid black;
 height: 100px;
