--- a/index.css
+++ b/index.css
@@ -34,3 +34,24 @@ width: 100px;
 #box3{
     background-color: rgba(9, 74, 177, 0.5);
 }
+
+@media (width:300px){
+    #box1{
+        background-color: green;
+    }
+}
+@media (min-width :300px) and (max-width :400px){
+    #box1{
+        background-color: pink;
+    }
+}
+@media (min-width :400px) and (max-width :600px){
+    #box1{
+        background-color: red;
+    }
+}
+@media (min-width :600px){
+    #box1{
+        background-color: blue;
+    }
+}
